--- a/public/modules/identifiers/views/list-identifiers.client.view.html
+++ b/public/modules/identifiers/views/list-identifiers.client.view.html
@@ -39,7 +39,7 @@
       </tr>
     </tbody>
   </table>
-  <div class="alert alert-warning text-center" data-ng-hide="!identifiers.$resolved || identifiers.length">
-    No Identifiers yet, why don't you <a href="/#!/identifiers/create">create one</a>?
+  <div class="alert alert-info text-center" data-ng-hide="!identifiers.$resolved || identifiers.length">
+    No results
   </div>
 </section>
