--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -82,9 +82,9 @@
 			</li>
 		</ul>
 
-    <form class="hidden-xs navbar-form navbar-left" id="nav-search" role="search" ui-route="/" data-ng-show="$uiRoute">
+    <form class="hidden-xs navbar-form navbar-left" id="nav-search" role="search">
       <div class="input-group">
-        <input type="text" data-ng-change="searchChanged()" data-ng-model="queryTerm" name="query" autocomplete="off" value="" id="nav-search-field" class="search-search form-control" placeholder="Search">
+        <input type="text" data-ng-change="searchChanged()" data-ng-model="queryTerm" autocomplete="off" value="" id="nav-search-field" class="search-search form-control" placeholder="Search">
         <span class="input-group-btn"><button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-plus"></span></button></span>
       </div>
     </form>
