--- a/public/modules/messages/views/list-messages.client.view.html
+++ b/public/modules/messages/views/list-messages.client.view.html
@@ -34,6 +34,7 @@
     <div class="col-md-8">
       <div data-ng-repeat="message in messages" class="panel animated fadeIn panel-success message-panel">
         <div class="panel-heading">
+          <span class="glyphicon glyphicon-thumbs-up mar-left5 pull-right"></span>
           <strong>
             <a data-ng-href="#!/id/{{message.data.signedData.author[0][0]}}/{{message.data.signedData.author[0][1]}}" class="id-link">
             <img alt="" src="https://www.gravatar.com/avatar/{{message.gravatar}}?d=retro&amp;s=30" class="img-rounded mar-right5"> <span data-ng-bind="message.authorName||message.data.signedData.author[0][1]"></span></a>
