Default params, msg styling, urlencode

--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -54,8 +54,8 @@
 
         </ul>
       </li>
-      <li class="visible-xs ">
-        <a href="#" class="login-button" data-toggle="collapse" data-target="#login-menu-xs"><span class="glyphicon glyphicon-log-in"></span> Log in <b class="caret"></b></a>
+      <li class="visible-xs " ui-route="/signin" ng-class="{active: $uiRoute}">
+        <a href="#!/signin" class="login-button" ><span class="glyphicon glyphicon-log-in"></span> Log in</b></a>
       </li>
     </ul>
 
