--- a/public/modules/identifiers/views/list-identifiers.client.view.html
+++ b/public/modules/identifiers/views/list-identifiers.client.view.html
@@ -1,4 +1,5 @@
 <section data-ng-controller="IdentifiersController" data-ng-init="search()">
+  <div class="mar-top60-xs"></div>
   <div data-ng-if="!queryTerm" class="jumbotron">
     <div class="align-center"><h1>Address book with ratings</h1></div>
 
@@ -11,9 +12,9 @@
 
   <table id="search-results" class="table table-hover">
     <tbody>
-      <tr data-ng-repeat="result in identifiers" class="search-result-row">
+      <tr data-ng-repeat="result in identifiers" data-id-type="{{result[0][0]}}" data-id-value="{{result[0][1]}}" data-ng-click="resultClicked($event)" class="search-result-row" data-ng-class="{active: $first}">
         <td class="gravatar-col"><img alt="" src="https://www.gravatar.com/avatar/{{result.gravatar}}?d=retro&amp;s=45"></td>
-        <td><a data-ng-bind="result.name" data-ng-href="#!/id/{{result[0][0]|filter:urlencode}}/{{result[0][1]|filter:urlencode}}"></a>
+        <td><a data-ng-bind="result.name" data-ng-href="#!/id/{{result[0][0]|urlencode}}/{{result[0][1]|urlencode}}"></a>
           <small data-ng-if="!result.name" class="list-group-item-text">
             <span data-ng-bind="result[0][0]"></span>
           </small><br>
