--- a/public/modules/identifiers/views/view-identifier.client.view.html
+++ b/public/modules/identifiers/views/view-identifier.client.view.html
@@ -196,8 +196,8 @@
                             <span class="glyphicon glyphicon-remove visible-xs mar-right10"></span>
                           </span>
                           <strong>
-                            <a data-ng-href="/id/{{msg.data.signedData.author[0][0]}}/{{msg.data.signedData.author[0][1]}}" class="id-link">
-                              <img alt="" src="https://www.gravatar.com/avatar/e30d5696b25f0dcd1bdf609753602977?d=retro&amp;s=30" class="img-rounded mar-right5"> 
+                            <a data-ng-href="#!/id/{{msg.data.signedData.author[0][0]}}/{{msg.data.signedData.author[0][1]}}" class="id-link">
+                              <img alt="" src="https://www.gravatar.com/avatar/{{msg.gravatar}}?d=retro&amp;s=30" class="img-rounded mar-right5"> 
                               <span data-ng-bind="msg.authorName||msg.data.signedData.author[0][1]"></span>
                             </a>
                           </strong>
