--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -84,7 +84,7 @@
 
     <form class="navbar-form navbar-left" id="nav-search" role="search" data-ng-if="isActive('/')">
       <div class="input-group">
-        <input type="text" data-ng-change="searchChanged()" data-ng-keypress="searchKeypress()" data-ng-model="queryTerm" autocomplete="off" autofocus value="" id="nav-search-field" class="search-search form-control" placeholder="Search">
+        <input type="text" data-ng-keydown="searchKeydown($event)" data-ng-model="queryTerm" autocomplete="off" autofocus value="" id="nav-search-field" class="search-search form-control" placeholder="Search">
         <span class="input-group-btn"><button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-plus"></span></button></span>
       </div>
     </form>
