--- a/public/modules/identifiers/views/list-identifiers.client.view.html
+++ b/public/modules/identifiers/views/list-identifiers.client.view.html
@@ -12,7 +12,7 @@
 
   <table id="search-results" class="table table-hover">
     <tbody>
-      <tr data-ng-repeat="result in identifiers" data-id-type="{{result[0][0]}}" data-id-value="{{result[0][1]}}" data-ng-click="resultClicked($event)" class="search-result-row" data-ng-class="{active: $first}">
+      <tr data-ng-repeat="result in identifiers" id="result{{$index}}" data-ng-click="resultClicked(result)" class="search-result-row" data-ng-class="{active: result.active}">
         <td class="gravatar-col"><img alt="" src="https://www.gravatar.com/avatar/{{result.gravatar}}?d=retro&amp;s=45"></td>
         <td><a data-ng-bind="result.name" data-ng-href="#!/id/{{result[0][0]|urlencode}}/{{result[0][1]|urlencode}}"></a>
           <small data-ng-if="!result.name" class="list-group-item-text">
